--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,9 +57,9 @@ aliases:
           sudo mv cmdline-tools $ANDROID_HOME/
           export PATH=$ANDROID_HOME/cmdline-tools/tools/bin:$PATH
           echo "Accepting SDK Licenses"
-          yes | sudo /usr/lib/android-sdk/cmdline-tools/tools/bin/sdkmanager --licenses --sdk_root=${ANDROID_HOME}
-          echo "Updating SDK"
-          yes | sudo /usr/lib/android-sdk/cmdline-tools/tools/bin/sdkmanager --update --sdk_root=${ANDROID_HOME}
+          yes | sdkmanager --licenses --sdk_root=${ANDROID_HOME} || true
+          # echo "Updating SDK"
+          # yes | sudo /usr/lib/android-sdk/cmdline-tools/tools/bin/sdkmanager --update --sdk_root=${ANDROID_HOME} || true
           echo "Installing SDK tools"
           yes | sdkmanager "tools" --sdk_root=${ANDROID_HOME}
           echo "Installing SDK platform-tools"
