--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,7 +71,7 @@ aliases:
           echo "Accepting SDK Licenses"
           yes | sdkmanager --licenses --sdk_root=${ANDROID_HOME} || true
           echo "Updating SDK and accepting licenses"
-          yes | sdkmanager --update --sdk_root=${ANDROID_HOME} || true
+          yes | sudo /usr/lib/android-sdk/cmdline-tools/tools/bin/sdkmanager --update --sdk_root=${ANDROID_HOME} || true
 
 defaults: &defaults
     # put here anything which is common between all jobs
