chore: some more for Android SDK

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,7 +55,8 @@ aliases:
           wget https://dl.google.com/android/repository/commandlinetools-linux-6609375_latest.zip
           unzip commandlinetools-linux-6609375_latest.zip -d cmdline-tools
           sudo mv cmdline-tools $ANDROID_HOME/
-          export PATH=$ANDROID_HOME/cmdline-tools/tools/bin:$PATH          
+          export PATH=$ANDROID_HOME/cmdline-tools/tools/bin:$ANDROID_HOME/tools:$ANDROID_HOME/tools/bin:$ANDROID_HOME/platform-tools:$PATH
+          mkdir ~/.android && echo '### User Sources for Android SDK Manager' > ~/.android/repositories.cfg
           echo "Installing SDK tools"
           yes | sdkmanager "tools" --sdk_root=${ANDROID_HOME} || true
           echo "Installing SDK platform-tools"
