chore: more fixes for JAVA_HOME in Circle

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,14 +52,17 @@ aliases:
       command: |
           sudo apt update
           sudo apt install openjdk-8-jdk
-          export JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64
-          export PATH=$PATH:$JAVA_HOME/bin
+          echo 'export JAVA_HOME="/usr/lib/jvm/java-8-openjdk-amd64"' >> $BASH_ENV
+          echo 'export PATH="${PATH}:${JAVA_HOME}/bin"' >> $BASH_ENV
+          echo $JAVA_HOME
+          echo $PATH
+          which java
           sudo apt install android-sdk
-          export ANDROID_HOME=/usr/lib/android-sdk
+          echo 'export ANDROID_HOME="/usr/lib/android-sdk"' >> $BASH_ENV
           wget https://dl.google.com/android/repository/commandlinetools-linux-6609375_latest.zip
           unzip commandlinetools-linux-6609375_latest.zip -d cmdline-tools
           sudo mv cmdline-tools $ANDROID_HOME/
-          export PATH=$ANDROID_HOME/cmdline-tools/tools/bin:$ANDROID_HOME/tools:$ANDROID_HOME/tools/bin:$ANDROID_HOME/platform-tools:$PATH
+          echo 'export PATH=${ANDROID_HOME}/cmdline-tools/tools/bin:${ANDROID_HOME}/tools:${ANDROID_HOME}/tools/bin:${ANDROID_HOME}/platform-tools:${PATH}"' >> $BASH_ENV
           mkdir ~/.android && echo '### User Sources for Android SDK Manager' > ~/.android/repositories.cfg
           sudo chown -R $(whoami) $ANDROID_HOME
           echo "Installing SDK tools"
@@ -78,6 +81,10 @@ aliases:
           yes | sdkmanager --licenses --sdk_root=${ANDROID_HOME} || true
           echo "Updating SDK and accepting licenses"
           yes | sudo /usr/lib/android-sdk/cmdline-tools/tools/bin/sdkmanager --update --sdk_root=${ANDROID_HOME} || true
+          echo $ANDROID_HOME
+          echo $JAVA_HOME
+          echo $PATH
+          which java
 
 defaults: &defaults
     # put here anything which is common between all jobs
