--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,6 +61,8 @@ aliases:
           sudo apt install openjdk-8-jdk
           which java
           java -version
+          sudo update-alternatives --install /usr/bin/java java /usr/lib/jvm/java-8-openjdk-amd64/jre/bin/java 1 --force
+          sudo update-alternatives --set java /usr/lib/jvm/java-8-openjdk-amd64/jre/bin/java
           echo 'export JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64' >> $BASH_ENV
           echo 'export PATH=$PATH:$JAVA_HOME/bin' >> $BASH_ENV
           source $BASH_ENV
@@ -95,6 +97,8 @@ aliases:
           echo $PATH
           echo $ANDROID_HOME
           echo $ANDROID_SDK_ROOT
+          which java
+          java -version
 
 defaults: &defaults
     # put here anything which is common between all jobs
