--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,10 +57,13 @@ aliases:
     - &install-android
       name: Install Android SDK
       command: |
-          sudo apt update
+          sudo apt-get update
           sudo apt-get remove openjdk*
           sudo apt-get clean
-          sudo apt-get install openjdk-8-jdk
+          sudo add-apt-repository ppa:openjdk-r/ppa
+          sudo apt-get update
+          sudo apt-get install -y openjdk-8-jdk
+          sudo update-java-alternatives --set java-1.8.0-openjdk-amd64
           which java
           java -version
           sudo update-alternatives --install /usr/bin/java java /usr/lib/jvm/java-8-openjdk-amd64/jre/bin/java 1 --force
