--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,7 +60,7 @@ aliases:
           sudo apt-get update
           sudo apt-get remove openjdk*
           sudo apt-get clean
-          sudo add-apt-repository ppa:openjdk-r/ppa
+          sudo add-apt-repository -y ppa:openjdk-r/ppa
           sudo apt-get update
           sudo apt-get install -y openjdk-8-jdk
           sudo update-java-alternatives --set java-1.8.0-openjdk-amd64
